2004-02-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.1.19.
	
2004-02-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py
	(classic_lilypond_book_compatibility): New function.

2004-02-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* buildscripts/lilypond.words.py (F): remove drums.scm reference.

	* Grand 2003 -> 2004 search replace. 

	* lily/parser.yy (chord_body_element): add DRUM_PITCH to chords
	(i.e. < > )

	* ly/performer-init.ly: add DrumStaff

	* lily/axis-group-engraver.cc (acknowledge_grob): also take
	lyric-interface; this prevents lines with only extender lines from
	being junked.
 
	* scm/define-grob-interfaces.scm (lyric-interface): new interface

	* lily/lyric-extender.cc (brew_molecule): get line breaking and
	extenders right, for once and for all (hopefully).
	
	* lily/break-substitution.cc (substitute_one_mutable_property):
	clear old 'all-elements for System grobs.

	* lily/new-lyric-combine-music-iterator.cc (find_voice): make sure
	that associatedVoiceContext is always assigned when music & lyrics
	are found. 

	* ly/engraver-init.ly: remove Lyrics context.
	(TabVoice): add noteheads engraver

	* input/test/improv.ly: update: do not use Thread switching. 

	* lily/pitch-squash-engraver.cc (acknowledge_grob): only squash if
	squashedPosition is a number  

	* Documentation/user/refman.itely (Automatic note splitting):
	remove Thread references.

	* input/no-notation/pc-direction.ly: remove file.

	* ly/engraver-init.ly: remove Thread

	* input/regression/tie-chord-partial.ly: remove file.

	* scripts/convert-ly.py (conv): \harmonic rule

	* lily/new-fingering-engraver.cc (acknowledge_grob): add new
	notation for harmonic notes: <c' g''\harmonic>

	* lily/lily-guile.cc (alist_to_hashq): new function

	* scm/lily.scm (alist->hash-table): new function.

	* Documentation/user/refman.itely (Percussion staves): update doco.

	* input/regression/drums.ly (timb): updates
