@@ -21,10 +21,6 @@
 
 /**
 
-
-FIXME: should not compute vertical positioning of accidentals, but
-get them from the noteheads
-
 The algorithm for accidentals should be documented, and made
 tweakable.
 
