@@ -148,6 +148,83 @@ drumPitchNames =
    (de . fivedown)
    )
 
+midiDrumPitches = #`(
+	(acousticbassdrum . ,(ly:make-pitch -3 6 NATURAL))
+	(bassdrum . ,(ly:make-pitch -2 0 NATURAL))
+	(hisidestick . ,(ly:make-pitch -3 6 DOUBLE-SHARP))
+	(sidestick . ,(ly:make-pitch -2 0 SHARP))
+	(losidestick . ,(ly:make-pitch -2 1 FLAT))
+	(acousticsnare . ,(ly:make-pitch -2 1 NATURAL))
+	(snare . ,(ly:make-pitch -2 2 DOUBLE-FLAT))
+	(handclap . ,(ly:make-pitch -2 1 SHARP))
+	(electricsnare . ,(ly:make-pitch -2 2 NATURAL))
+	(lowfloortom . ,(ly:make-pitch -2 3 NATURAL))
+	(closedhihat . ,(ly:make-pitch -2 3 SHARP))
+	(hihat . ,(ly:make-pitch -2 4 FLAT))
+	(highfloortom . ,(ly:make-pitch -2 4 NATURAL))
+	(pedalhihat . ,(ly:make-pitch -2 4 SHARP))
+	(lowtom . ,(ly:make-pitch -2 5 NATURAL))
+	(openhihat . ,(ly:make-pitch -2 5 SHARP))
+	(halfopenhihat . ,(ly:make-pitch -2 5 SHARP))
+	(lowmidtom . ,(ly:make-pitch -2 6 NATURAL))
+	(himidtom . ,(ly:make-pitch -1 0 NATURAL))
+	(crashcymbala . ,(ly:make-pitch -1 0 SHARP))
+	(crashcymbal . ,(ly:make-pitch -1 1 FLAT))
+	(hightom . ,(ly:make-pitch -1 1 NATURAL))
+	(ridecymbala . ,(ly:make-pitch -1 1 SHARP))
+	(ridecymbal . ,(ly:make-pitch -1 2 FLAT))
+	(chinesecymbal . ,(ly:make-pitch -1 2 NATURAL))
+	(ridebell . ,(ly:make-pitch -1 3 NATURAL))
+	(tambourine . ,(ly:make-pitch -1 3 SHARP))
+	(splashcymbal . ,(ly:make-pitch -1 4 NATURAL))
+	(cowbell . ,(ly:make-pitch -1 4 SHARP))
+	(crashcymbalb . ,(ly:make-pitch -1 5 NATURAL))
+	(vibraslap . ,(ly:make-pitch -1 5 SHARP))
+	(ridecymbalb . ,(ly:make-pitch -1 6 NATURAL))
+	(mutehibongo . ,(ly:make-pitch -1 6 SHARP))
+	(hibongo . ,(ly:make-pitch 0 0 NATURAL))
+	(openhibongo . ,(ly:make-pitch 0 1 DOUBLE-FLAT))
+	(mutelobongo . ,(ly:make-pitch -1 6 DOUBLE-SHARP))
+	(lobongo . ,(ly:make-pitch 0 0 SHARP))
+	(openlobongo . ,(ly:make-pitch 0 1 FLAT))
+	(mutehiconga . ,(ly:make-pitch 0 1 NATURAL))
+	(muteloconga . ,(ly:make-pitch 0 2 DOUBLE-FLAT))
+	(openhiconga . ,(ly:make-pitch 0 1 SHARP))
+	(hiconga . ,(ly:make-pitch 0 2 FLAT))
+	(openloconga . ,(ly:make-pitch 0 1 DOUBLE-SHARP))
+	(loconga . ,(ly:make-pitch 0 2 NATURAL))
+	(hitimbale . ,(ly:make-pitch 0 3 NATURAL))
+	(lotimbale . ,(ly:make-pitch 0 3 SHARP))
+	(hiagogo . ,(ly:make-pitch 0 4 NATURAL))
+	(loagogo . ,(ly:make-pitch 0 4 SHARP))
+	(cabasa . ,(ly:make-pitch 0 5 NATURAL))
+	(maracas . ,(ly:make-pitch 0 5 SHARP))
+	(shortwhistle . ,(ly:make-pitch 0 6 NATURAL))
+	(longwhistle . ,(ly:make-pitch 1 0 NATURAL))
+	(shortguiro . ,(ly:make-pitch 1 0 SHARP))
+	(longguiro . ,(ly:make-pitch 1 1 NATURAL))
+	(guiro . ,(ly:make-pitch 1 0 DOUBLE-SHARP))
+	(claves . ,(ly:make-pitch 1 1 SHARP))
+	(hiwoodblock . ,(ly:make-pitch 1 2 NATURAL))
+	(lowoodblock . ,(ly:make-pitch 1 3 NATURAL))
+	(mutecuica . ,(ly:make-pitch 1 3 SHARP))
+	(opencuica . ,(ly:make-pitch 1 4 NATURAL))
+	(mutetriangle . ,(ly:make-pitch 1 4 SHARP))
+	(triangle . ,(ly:make-pitch 1 4 DOUBLE-SHARP))
+	(opentriangle . ,(ly:make-pitch 1 5 NATURAL))
+	
+	;; "transposing" pitches:
+	(oneup . ,(ly:make-pitch 0 1 NATURAL))
+	(twoup . ,(ly:make-pitch 0 2 NATURAL))
+	(threeup . ,(ly:make-pitch 0 3 NATURAL))
+	(fourup . ,(ly:make-pitch 0 4 NATURAL))
+	(fiveup . ,(ly:make-pitch 0 5 NATURAL))
+	(onedown . ,(ly:make-pitch -1 6 NATURAL))
+	(twodown . ,(ly:make-pitch -1 5 NATURAL))
+	(threedown . ,(ly:make-pitch -1 4 NATURAL))
+	(fourdown . ,(ly:make-pitch -1 3 NATURAL))
+	(fivedown . ,(ly:make-pitch -1 2 NATURAL))
+)
 
 
 #(map
