@@ -1,5 +1,7 @@
 2004-02-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/drum-note-performer.cc: new file: perform drum notes.
+
 	* VERSION (PACKAGE_NAME): release 2.1.19.
 	
 2004-02-05  Jan Nieuwenhuizen  <janneke@gnu.org>
